fix button line break on Android Chrome

--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,7 @@ header h1 {
     padding: 1rem;
     margin: auto;
     margin-top: 0;
+    white-space: nowrap;
 }
 /* About section styling */
 img {
